# omni-relay

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  USAGE.md  cli.py  pyproject.toml  requirements.txt  setup.py  skill.json
.clawhub/: release.json
.github/: SECRETS_SETUP.md
.github/workflows/: update-models-daily.yml
omnirelay/: __init__.py  cli.py  config.py  main.py  models.py  watcher.py
omnirelay/data/: __init__.py  free-models.json  loader.py
omnirelay/providers/: __init__.py  deepseek.py  gemini.py  groq.py  kilo.py  novita.py  openai.py  openrouter.py  qwen.py  xai.py  zhipu.py
omnirelay/utils/: __init__.py  _referrals.py
scripts/: README.md  collect_models_daily.py
tests/: __init__.py  test_config.py  test_data_loader.py  test_kilo.py  test_models.py  test_providers.py  test_referrals.py  test_utils.py
